--- a/static/style.css
+++ b/static/style.css
@@ -276,6 +276,12 @@ p {
     margin-top: 0.4rem;
 }
 
+.card .card-body .btn {
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+    width: fit-content;
+}
+
 
 /*** FOOTER ***/
 footer {
